fixing the problem of main ship and going out of view port

--- a/css/style.css
+++ b/css/style.css
@@ -51,28 +51,37 @@ table {
 }
 
 .main__ship {
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
   position: relative;
   rotate: -90deg;
 }
 .main__ship > * {
   position: absolute;
 }
-
-.main__ship--rifleContainer {
-  position: absolute;
-  display: flex;
-  gap: 6px;
-  height: 55px;
-  align-items: flex-end;
+.main__ship--bullet__container {
+  width: 100%;
+  height: 100%;
 }
-
-.main__ship--rifleBullet {
-  width: 5px;
-  height: 50px;
+.main__ship--bullet__container .bullet {
+  height: 5px;
+  width: 50%;
   background: linear-gradient(to bottom, #FFA, #FF4);
-  border-radius: 50% 50% 3px 3px;
+  border-radius: 50% 50%;
+  z-index: 100;
+  position: absolute;
+}
+.main__ship--bullet__container .bullet__num__1 {
+  right: 5%;
+  top: calc(50% - 2.5px);
+}
+.main__ship--bullet__container .bullet__num__2 {
+  left: 5%;
+  top: calc(33% - 2.5px);
+}
+.main__ship--bullet__container .bullet__num__3 {
+  left: 5%;
+  bottom: calc(33% - 2.5px);
 }
 
 div[class*=main__ship--motor] {
@@ -813,4 +822,10 @@ div[class*=boss__fight--laser--] {
   100% {
     rotate: 360deg;
   }
+}
+body {
+  width: 100%;
+  height: 100vh;
+  background: black;
+  overflow: hidden;
 }
