--- a/scss/_ship-styles.scss
+++ b/scss/_ship-styles.scss
@@ -1,27 +1,37 @@
 // main ship
 .main__ship{
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     position: relative;
     rotate: -90deg;
     > * {
         position: absolute;
     }
-}
-
-.main__ship--rifleContainer{
-    position: absolute;
-    display: flex;
-    gap: 6px;
-    height: 55px;
-    align-items: flex-end;
-}
-
-.main__ship--rifleBullet{
-    width: 5px;
-    height: 50px;
-    background: linear-gradient(to bottom, #FFA, #FF4);
-    border-radius: 50% 50% 3px 3px;
+    &--bullet__container{
+        width: 100%;
+        height: 100%;
+        // z-index: -1;
+        .bullet{
+            height: 5px;
+            width: 50%;
+            background: linear-gradient(to bottom, #FFA, #FF4);
+            border-radius: 50% 50%;
+            z-index: 100;
+            position: absolute;
+        }
+        .bullet__num__1{
+            right: 5%;
+            top: calc(50% - 2.5px);
+        }
+        .bullet__num__2{
+            left: 5%;
+            top: calc(33% - 2.5px);
+        }
+        .bullet__num__3{
+            left: 5%;
+            bottom: calc(33% - 2.5px);
+        }
+    }
 }
 
 div[class *= "main__ship--motor"]{
